--- a/src/components/AboutM/styles.module.scss
+++ b/src/components/AboutM/styles.module.scss
@@ -1,16 +1,3 @@
-.trailsText {
-  position: relative;
-  width: 100%;
-  height: 100px;
-  line-height: 100px;
-  color: black;
-  font-size: 6em;
-  font-weight: 800;
-  overflow: hidden;
-  margin-top: 24px;
-  margin-bottom: 24px;
-}
-
 .trailsText>div {
   padding-right: 0.05em;
   overflow: hidden;
@@ -23,10 +10,10 @@
   overflow: hidden;
   background-color: #EF8354;
   flex-direction: column;
-
+  
 }
 
 .RaisingTextContainer {
   padding: 24px;
-  margin-top: 20%;
+  text-align: center;
 }
