--- a/src/components/WelcomeM/styles.module.scss
+++ b/src/components/WelcomeM/styles.module.scss
@@ -4,23 +4,24 @@
   height: 100px;
   line-height: 100px;
   color: #4F5D75;
-  font-size: 6em;
+  font-size: 4rem;
   font-weight: 800;
   overflow: hidden;
-  margin-top: 24px;
-  margin-bottom: 24px;
+  margin-top: 12px;
+  margin-bottom: 12px;
 }
 
 .trailsText > div {
-  padding-right: 0.05em;
+  padding-right: 0.05rem;
   overflow: hidden;
 }
 
 .container {
   display: flex;
   align-items: center;
-  height: 100%;
   justify-content: center;
   width: 100%;
   transition: all 0.5s;
+  flex-direction: column;
+  text-align: center;
 }
