--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,20 +1,17 @@
-.body {
+.body_container {
   background-color: #ffffff;
   width: 100%;
   padding: 0 5% 0 5%;
   height: calc(100vh - 81px);
-  position: fixed;
+  position: relative;
 }
-.body::-webkit-scrollbar {
-  display: none;
-}
+
 
 .full__page {
   position: fixed;
   top: 81px;
   width: 90%;
   height: calc(100vh - 81px);
-  display: flex;
 }
 
 .bar__container {
@@ -46,11 +43,60 @@
   pointer-events: none;
   z-index: 0;
 
-  & > * {
+  &>* {
     pointer-events: none;
     width: 100%;
     height: 100%;
     position: fixed;
     inset: 0;
+  }
+}
+
+.scroll_reminder {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 100;
+  bottom: 48px;
+  animation-name: scroll_reminder;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 1.5s;
+  color: #9F7065;
+}
+
+
+.page_container {
+  display: flex;
+  position: absolute;
+  height: inherit;
+  width: 100%;
+  padding-bottom: 60px;
+  transition: all 1s;
+}
+
+.page_container_m {
+  display: flex;
+  position: absolute;
+  height: inherit;
+  width: 100%;
+  padding-bottom: 60px;
+  transition: all 1s;
+  flex-direction: column;
+}
+
+@keyframes scroll_reminder {
+
+  from {
+    transform: translateY(10px);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateY(-10px);
+    opacity: 1;
   }
 }
