--- a/src/components/AboutM/styles.module.scss
+++ b/src/components/AboutM/styles.module.scss
@@ -8,7 +8,7 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
-  background-color: #EF8354;
+  background-color: #9face6;
   flex-direction: column;
   
 }
