--- a/src/components/Contact/styles.module.scss
+++ b/src/components/Contact/styles.module.scss
@@ -10,5 +10,5 @@
     font-weight: 400;
     font-size: 24px;
     color: #9F7065;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    line-height: 24px;
 }
