--- a/src/components/Skills/styles.module.scss
+++ b/src/components/Skills/styles.module.scss
@@ -1,90 +1,138 @@
 .skill_title {
-    font-size: 32px;
-    font-weight: 600;
-    color: #9F7065;
-    margin: 0;
+  font-size: 32px;
+  font-weight: 600;
+  color: #000000;
+  margin: 0;
 }
 
 .card {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    will-change: transform, opacity;
-    transition: box-shadow 0.5s;
-    border-radius: 12px;
-    padding: 24px;
-    box-shadow: 0px 3px 5px rgba(9, 30, 66, 0.15), 0px 0px 1px rgba(9, 30, 66, 0.31);
-    background-color: rgba(255, 255, 255, 0.8);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  will-change: transform, opacity;
+  transition: box-shadow 0.5s;
+  border-radius: 12px;
+  padding: 24px;
+  box-shadow: 0px 3px 5px rgba(9, 30, 66, 0.15),
+    0px 0px 1px rgba(9, 30, 66, 0.31);
+  background-color: rgba(255, 255, 255, 0.8);
 
-    &:hover {
-        box-shadow: 0px 18px 28px rgba(9, 30, 66, 0.15), 0px 0px 1px rgba(9, 30, 66, 0.31);
-    }
+  &:hover {
+    box-shadow: 0px 18px 28px rgba(9, 30, 66, 0.15),
+      0px 0px 1px rgba(9, 30, 66, 0.31);
+  }
 }
 
 .skills_card_wrap {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    width: 100%;
-    grid-column-gap: 24px;
-    height: 100%;
-    padding: 24px 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
+  grid-column-gap: 24px;
+  height: 100%;
+  padding: 24px 0;
 }
 
-
 .container {
-    display: flex;
-    align-items: center;
-    width: inherit;
-    height: 100%;
-    justify-content: center;
-    position: relative;
+  display: flex;
+  align-items: center;
+  width: inherit;
+  height: 100%;
+  justify-content: center;
+  position: relative;
 }
 
 .skills_wrap {
-    width: 100%;
-    height: 100%;
-    padding: 24px;
+  width: 100%;
+  height: 100%;
+  padding: 24px;
 }
 
 .skills_background_start {
-    width: 100%;
-    height: calc(100% - 24px);
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #DFE0E0;
-    z-index: -1;
-    clip-path: polygon(0 0, 40% 0, 85% 100%, 0% 100%);
+  width: 100%;
+  height: calc(100% - 24px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #d6d6d6;
+  z-index: -1;
+  clip-path: polygon(0 0, 40% 0, 85% 100%, 0% 100%);
 }
 
 .skills_background_end {
-    width: 100%;
-    height: calc(100% - 24px);
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #2D3142;
-    z-index: -1;
-    clip-path: polygon(100% 0, 40% 0, 85% 100%, 100% 100%);
+  width: 100%;
+  height: calc(100% - 24px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(to right, #6a85b6 0%, #bac8e0 100%);
+  z-index: -1;
+  clip-path: polygon(100% 0, 40% 0, 85% 100%, 100% 100%);
+}
+.cardtitle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  p {
+    font-size: 2rem;
+    font-weight: 600;
+    padding-top: 40px;
+    color: #6a85b6;
+  }
+}
+.cardIcon {
+  color: #6a85b6 !important;
+  svg {
+    height: 40px;
+    width: 40px;
+  }
 }
 
-@media screen and (max-width:768px) {
-    .skills_card_wrap {
-        grid-template-columns: 1fr;
-        width: 100%;
-        grid-row-gap: 12px;
-        height: 100%;
-        padding: 24px 0;
+.flipHint {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  color: rgba(45, 68, 88, 0.616) !important;
+  bottom: 12px;
+  right: 12px;
+}
+.skillItems{
+    font-size: 1.5rem;
+    color:#6a85b6;
+    font-weight: 800;
+}
+
+@media screen and (max-width: 768px) {
+  .skills_card_wrap {
+    grid-template-columns: 1fr;
+    width: 100%;
+    grid-row-gap: 12px;
+    height: 100%;
+    padding: 24px 0;
+  }
+
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: inherit;
+    height: 100%;
+    flex-wrap: wrap;
+  }
+  .card {
+    overflow-y: scroll;
+  }
+  .cardtitle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    p {
+      padding-top: 0;
+      font-size: 1rem;
     }
-
-    .container {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        width: inherit;
-        height: 100%;
-        flex-wrap: wrap;
-
-    }
-
+  }
+  .skillItems{
+    font-size: 1rem;
+  }
 }
