--- a/src/components/TopNav/styles.module.scss
+++ b/src/components/TopNav/styles.module.scss
@@ -8,7 +8,9 @@
 .nav_title {
   text-align: center;
   margin: 0;
-  font-weight: 800;
+  font-size: 1.5rem;
+  font-weight: 1000;
   cursor: pointer;
   color: #2D3142;
+
 }
