--- a/src/components/Welcome/styles.module.scss
+++ b/src/components/Welcome/styles.module.scss
@@ -3,7 +3,13 @@
   width: 100%;
   height: 100px;
   line-height: 100px;
-  color: #4F5D75;
+  background: linear-gradient(to right, #74ebd5 0%, #9face6 100%);
+  -webkit-background-clip: text;
+
+  -webkit-text-fill-color: transparent;
+  font: {
+    size: 6em;
+  }
   font-size: 6em;
   font-weight: 800;
   overflow: hidden;
