--- a/src/components/WelcomeM/styles.module.scss
+++ b/src/components/WelcomeM/styles.module.scss
@@ -3,12 +3,18 @@
   width: 100%;
   height: 100px;
   line-height: 100px;
-  color: #4F5D75;
   font-size: 4rem;
   font-weight: 800;
   overflow: hidden;
   margin-top: 12px;
   margin-bottom: 12px;
+  background: linear-gradient(to right, #74ebd5 0%, #9face6 100%);
+  -webkit-background-clip: text;
+
+  -webkit-text-fill-color: transparent;
+  font: {
+    size: 4em;
+  }
 }
 
 .trailsText > div {
