--- a/src/components/Contact/styles.module.scss
+++ b/src/components/Contact/styles.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     font-weight: 400;
     font-size: 24px;
-    color: #9F7065;
+    color: #000;
     line-height: 24px;
+    font-family: 'Montserrat', sans-serif;
 }
