--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body,
 }
 
 body {
-    font-family: "Noto Sans TC", "Noto Sans SC", sans-serif !important;
+    font-family: "Montserrat", sans-serif !important;
     margin: 0;
 }
 
