--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -68,7 +68,8 @@
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-duration: 1.5s;
-  color: #6a85b6;
+  color: #a994ff;
+  font-size: 12px;
 }
 
 
