--- a/src/components/AboutM/styles.module.scss
+++ b/src/components/AboutM/styles.module.scss
@@ -8,9 +8,9 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
-  background-color: #9face6;
+  background: linear-gradient(180deg, rgba(159,172,230,1) 0%, rgba(162,0,255,1) 100%);
   flex-direction: column;
-  
+  border-radius: 12px;
 }
 
 .RaisingTextContainer {
